--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,9 @@ input[type=number] {
 .fz-14 {
   font-size: 14px !important; }
 
+.fz-15 {
+  font-size: 15px !important; }
+
 .fz-16 {
   font-size: 16px !important; }
 
@@ -865,10 +868,19 @@ label.checkbox-group {
 .bid-time .bid-text-green {
   color: #24997D; }
 
-.block-gray-img {
-  width: 240px;
-  height: 160px;
+.block-img {
+  border-radius: 8px; }
+  @media (min-width: 768px) {
+    .block-img {
+      width: 240px;
+      height: 160px; } }
+
+.block-gray {
   border-radius: 8px;
+  width: 240px;
+  height: 160px; }
+
+.bg-gray {
   background: #F5F5F7; }
 
 @media (min-width: 1200px) {
