--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,13 @@ label.checkbox-group {
   padding: 10px;
   font-size: 18px; }
 
+.form-textarea-100 {
+  height: 100px !important; }
+
+.form-textarea-125 {
+  height: 125px !important;
+  padding-bottom: 40px; }
+
 .uploader-plugin {
   position: relative;
   overflow: hidden;
@@ -799,12 +806,12 @@ label.checkbox-group {
   .address:not(:last-child) {
     border-bottom: 1px solid #EEEEF0; }
 
-.block-gray {
+.block-website {
   background: #FCFCFC;
   padding: 24px;
   border: 1px solid #EEEEF0; }
   @media (max-width: 575.98px) {
-    .block-gray {
+    .block-website {
       padding: 15px; } }
 
 .my-40 {
