--- a/sass/style.sass
+++ b/sass/style.sass
@@ -591,6 +591,13 @@ label
 	padding: 10px
 	font-size: $fz-18
 
+.form-textarea-100
+	height: 100px !important
+
+.form-textarea-125
+	height: 125px !important
+	padding-bottom: 40px
+
 .uploader-plugin
 	position: relative
 	overflow: hidden
@@ -858,7 +865,7 @@ label
 	&:not(:last-child)
 		border-bottom: 1px solid $color-hr
 
-.block-gray
+.block-website
 	background: $color-white-2
 	padding: 24px
 	border: 1px solid $color-hr
