--- a/sass/style.sass
+++ b/sass/style.sass
@@ -247,7 +247,18 @@ hr
 	background: $color-blue
 	font-weight: $font-weight-500
 	&:hover 
+		background: $color-blue-2
+
+.btn-edit-outline
+	background: transparent
+	padding-top: 7px
+	padding-bottom: 7px
+	color: $color-blue-2
+	border: 1px solid $color-blue-2
+	font-weight: $font-weight-500
+	&:hover 
 		background: $color-blue
+		border: 1px solid $color-blue
 
 .sandwich
 	display: inline-block
