--- a/sass/style.sass
+++ b/sass/style.sass
@@ -81,6 +81,9 @@ body
 a 
 	text-decoration: none !important
 	transition: $transition
+	&.text-blue 
+		&:hover 
+			color: $color-blue-2
 
 input
 	&[type=radio], &[type=checkbox]
