--- a/sass/style.sass
+++ b/sass/style.sass
@@ -466,7 +466,7 @@ hr
 	@media (max-width: 575.98px)
 		padding: 40px 20px
 
-.form-control
+.form-control, .custom-select
 	padding: 10px 13px
 	height: 44px
 	font-size: $fz-18
@@ -506,6 +506,13 @@ hr
 			color: $color-blue
 		&:focus
 			color: $color-blue
+
+.custom-select
+	padding: 6px 30px 6px 13px
+	background: $color-white url(../img/arrow.svg) no-repeat right .75rem center/20px 11px
+	&:hover 
+		background: $color-white-2 url(../img/arrow.svg) no-repeat right .75rem center/20px 11px
+
 
 .copy 
 	position: absolute 
@@ -610,7 +617,9 @@ label
 
 .form-textarea-125
 	height: 125px !important
-	padding-bottom: 40px
+
+.form-textarea-72
+	height: 72px !important
 
 .uploader-plugin
 	position: relative
@@ -900,6 +909,17 @@ label
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.02)
 	border: 1px solid $color-card
 	color: $color-gray-3
+	@media (max-width: 575.98px)
+		padding: 25px 15px
+
+.draft-block
+	padding: 32px
+	border-radius: 8px
+	border: 1px dashed $color-disabled
+	@media (max-width: 1259.98px)
+		padding: 24px
+	@media (max-width: 1199.98px)
+		padding: 32px
 	@media (max-width: 575.98px)
 		padding: 25px 15px
 
