--- a/sass/style.sass
+++ b/sass/style.sass
@@ -527,6 +527,21 @@ hr
 	background-position: center center
 	background-image: url(../img/copy.svg)
 
+.date 
+	position: absolute 
+	transition: $transition
+	background: none
+	top: 50%
+	transform: translateY(-50%)
+	right: 13px
+	width: 20px
+	height: 20px
+	background-size: cover
+	background-position: center center
+	background-image: url(../img/date.svg)
+.time
+	background-image: url(../img/time.svg)
+
 .form-group
 	color: $color-gray-3
 	.confirmed 
@@ -620,6 +635,9 @@ label
 
 .form-textarea-72
 	height: 72px !important
+
+.form-textarea-155
+	height: 155px !important
 
 .uploader-plugin
 	position: relative
