--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,22 @@ hr {
   background-position: center center;
   background-image: url(../img/copy.svg); }
 
+.date {
+  position: absolute;
+  transition: 0.3s;
+  background: none;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 13px;
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+  background-position: center center;
+  background-image: url(../img/date.svg); }
+
+.time {
+  background-image: url(../img/time.svg); }
+
 .form-group {
   color: #535353; }
   .form-group .confirmed {
@@ -567,6 +583,9 @@ label.checkbox-group {
 
 .form-textarea-72 {
   height: 72px !important; }
+
+.form-textarea-155 {
+  height: 155px !important; }
 
 .uploader-plugin {
   position: relative;
