--- a/sass/style.sass
+++ b/sass/style.sass
@@ -467,7 +467,7 @@ hr
 		padding: 40px 20px
 
 .form-control, .custom-select
-	padding: 10px 13px
+	padding: 7px 13px
 	height: 44px
 	font-size: $fz-18
 	transition: $transition
@@ -639,135 +639,159 @@ label
 .form-textarea-155
 	height: 155px !important
 
-.uploader-plugin
+.uploader
+	display: block
 	position: relative
 	overflow: hidden
-	border-radius: .25rem
-	transition: $transition
-	&:hover 
-		background: $color-white-2
-	input.upload
-		position: absolute
-		top: 0
-		right: 0
-		bottom: 0
-		left: 0
-		margin: 0
-		padding: 0
-		font-size: 20px
-		opacity: 0
-		filter: alpha(opacity = 0)
-		&.error 
-			~ .fileUpload
-				border-color: $color-red
-	.fileUpload
-		padding: 6px 13px
-		height: 44px
-		font-size: $fz-18
+	margin: 0
+	cursor: pointer
+	&.uploader-control
+		.form-control
+			padding-right: 45px
+			white-space: nowrap
+			text-overflow: ellipsis
+			img 
+				width: 20px
+		&.uploaded 
+			.delete
+				display: block
+	&.uploader-box
+		text-align: center
+		.form-control	
+			width: 120px
+			height: 120px
+			padding: 0
+			img 
+				width: 24px
+			.uploader-text-wrap
+				position: absolute
+				top: 50%
+				left: 0
+				right: 0
+				padding: 0 15px
+				transform: translateY(-50%)
+				transition: $transition
+				.uploader-text
+					display: block
+		&.uploaded 
+			.delete-wrap
+				display: flex
+			&:hover
+				.delete-wrap
+					opacity: 1
+					visibility: visible
+	&.uploader-box-2
+		.form-control	
+			width: 100%
+			height: 112px
+			border: 0
+			border-radius: 0
+			background: #FCFCFC
+			&:hover 
+				background: #F5F5F7
+		&:not(.uploaded)
+			.uploader-text-wrap
+				opacity: 0
+			&:hover 
+				.uploader-text-wrap
+					opacity: 1
+				.image
+					opacity: 0
+	&.uploader-box-3
+		.form-control	
+			width: 100%
+			border: 0
+			background: #FCFCFC
+			height: 460px
+			img 
+				width: 48px
+			@media (max-width: 575.98px)
+				height: 290px
+			&:hover 
+				background: #F5F5F7
+		.uploader-text
+			margin: 9px 0 14px
+		.delete-wrap
+			.star, .delete
+				width: 88px
+				margin: 0 24px
+	.image 
+		width: 100% !important
+		height: 100%
+		object-fit: cover
+		position: relative
 		transition: $transition
-		color: $color-blue
-		border: 1px solid $color-hr 
-		border-radius: .25rem
-		text-align: left
-		width: 100%
-		font-weight: $font-weight-500
-		white-space: nowrap
-		text-overflow: ellipsis
-		padding-right: 45px
-		img 
-			width: 20px
-	.delete-small 
+	input
 		position: absolute
+		visibility: hidden
+		&.error 
+			~ .form-control
+				border-color: $color-red
+	.form-control
+		position: relative
+		overflow: hidden
+		.uploader-text
+			color: $color-blue
+			white-space: nowrap
+			text-overflow: ellipsis
+		.uploader-description
+			font-size: 14px
+			line-height: 17px
+			max-width: 238px
+			display: block
+			margin: 0 auto
+	> .delete 
 		display: none
+		width: 20px
+		position: absolute
 		right: 13px
 		top: 50%
-		width: 20px
-		height: 20px
 		transform: translateY(-50%)
-		transition: $transition
-		.delete-2
-			position: absolute
-			top: 0
-			right: 0
-			bottom: 0
-			left: 0
-			opacity: 0
-			transition: $transition
+	.star
 		&:hover
-			.delete-2
-				opacity: 1
+			opacity: .8
+	.delete 
+		transition: $transition
 		img 
 			display: block
-
-.uploader 
-	label 
-		padding: 10px
-		height: 120px
-		width: 120px
-		text-align: center
-		border-radius: 4px
-		border: 1px solid $color-hr
-		transition: $transition
-		display: flex
-		flex-direction: column
-		overflow: hidden
-		&:hover 
-			background: $color-white-2
-		&.file-upload 
-			padding: 0
-			.delete-img
-				display: block
-			&:hover 
-				.delete-img
+			&:last-child
+				position: absolute
+				top: 0
+				right: 0
+				bottom: 0
+				left: 0
+				opacity: 0
+				transition: $transition
+		&:hover
+			img 
+				&:last-child
 					opacity: 1
-	.delete-img
-		display: none
-		opacity: 0
-		background: rgba(252, 252, 252, .94)
+	.delete-wrap
 		position: absolute
 		top: 0
 		right: 0
 		bottom: 0
 		left: 0
-		img
-			position: absolute
-			bottom: 50%
-			left: 50%
-			transform: translate(-50%, 50%)
-	#start 
-		padding: 22px 10px
-		&.hidden 
-			display: none
-	#response 
-		&.hidden 
-			display: none
-		#messages 
-			display: none
-	#file-image
-		margin: auto
-		max-height: 100%
-		&.hidden 
-			display: none
-	#notimage 
-		display: block
-		float: left
-		clear: both
-		width: 100%
-		&.hidden 
-			display: none
-	input[type="file"] 
+		background: rgba(252, 252, 252, .94)
+		transition: $transition
+		align-items: center
+		justify-content: center
+		display: none
 		opacity: 0
-		position: absolute
-		top: 0
-		left: 0
-		font-size: $fz-0
-		pointer-events: none
-		&.error
-			~ label 
-				border-color: $color-red
-	div 
-		color: $color-blue
-		font-size: $fz-18
+		visibility: hidden
+		.star, .delete
+			width: 44px
+			position: relative
+			margin: 0 12px
+			img 
+				width: 100%
+	&:not(.uploader-box-2):not(.uploader-box-3)
+		.delete-wrap
+			top: 1px
+			right: 1px
+			bottom: 1px
+			left: 1px
+			border-radius: 3px
 
 .bg-upload
 	display: inline-block
