--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,10 @@ hr {
   background: #FCFCFC url(../img/arrow.svg) no-repeat right 0.75rem center/20px 11px;
 }
 
+.datepicker, .timepicker {
+  padding-right: 44px;
+}
+
 .copy {
   position: absolute;
   transition: 0.3s;
@@ -710,6 +714,7 @@ hr {
   background-size: cover;
   background-position: center center;
   background-image: url(../img/date.svg);
+  pointer-events: none;
 }
 
 .time {
@@ -856,6 +861,10 @@ label.checkbox-group input:checked ~ div:before {
   cursor: pointer;
 }
 
+.uploader.uploaded input {
+  pointer-events: none;
+}
+
 .uploader.uploader-control .form-control {
   padding-right: 45px;
   white-space: nowrap;
@@ -929,6 +938,12 @@ label.checkbox-group input:checked ~ div:before {
 
 .uploader.uploader-box-2:not(.uploaded):hover .image {
   opacity: 0;
+}
+
+.uploader.uploader-box-2 .image {
+  background-image: url(../img/placeholder-2.svg);
+  background-position: center center;
+  background-size: cover;
 }
 
 .uploader.uploader-box-3 .form-control {
